--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     background-color: #dadada; 
     color: #303a89; 
     padding: 10px 20px; 
+
 }
 
 .logo{
@@ -16,9 +17,10 @@ ul{
     list-style: none;
     text-transform: uppercase;
     gap: 20px;
-    font-size: 18px;
+    font-size: 16px;
     padding: 0%;
-    margin: 0%;
+    margin-right: 40%;
+
     
 }
 
@@ -43,10 +45,42 @@ img{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    
-    font-size: 40px;
+    /* font-size: 40px; */
+    display: flex;
+    padding: 2% 4%;
+    font-size: 2em;
+  
 
 }
+.bold{
+    
+    font-weight:800 ;
+    
+}
+.horizontal-line {
+    position: relative;
+    top: 20px;
+}
+
+hr {
+    border: none;
+    border-top: 2px solid #b1b0b0; 
+}
+
+.centered-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 10px 20px; 
+    border-radius: 5px; 
+    font-size: 28px;
+    text-transform: uppercase;
+    color: #999;
+
+}
+
 
 
 
