--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #dadada; 
+    /* background-color: #dadada;  */
     color: #303a89; 
     padding: 10px 20px; 
 
@@ -25,6 +25,10 @@ ul{
     
 }
 
+li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
 :root{
     font-family:  'Open Sans';
 }
@@ -36,7 +40,7 @@ img{
 }
 .imgcontainer{
     position: relative;
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -85,6 +89,13 @@ hr {
 .container{
     display: flex;
     margin-top: 70px;
+    gap: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+
+   
 
 }
 
@@ -92,18 +103,27 @@ hr {
     flex: 1;
     padding: 20px;
     text-align: center;
-    position: relative;
-    margin: 0 auto;
+    
 }
 
 .container>div>img{
    height: auto;
-    width: 100%;
-    display: block;
+    width: 100px;
+    overflow: hidden;
+    position: relative;
+    display: inline;
+    border-radius: 50%;
+
 }
 
-.cricle{
-    position: absolute;
-    
+.title
+{
+    text-transform: uppercase;
+    font-weight: 600;
+
+}
+
+.sampletext{
+    text-align: left;
 
 }
