--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: #dadada;  */
+    background-color: #ffffff; 
     color: #303a89; 
     padding: 10px 20px; 
+    position: sticky;
+    top: 0;
+    z-index: 1;
 
 }
 
