--- a/tsi.css
+++ b/tsi.css
@@ -9,6 +9,7 @@ height: 94vh;
  background-image: url('iStock-543329290.png');
  background-size: cover; 
  background-repeat: no-repeat; 
+ background-position-x: 10%;
   
 }
 .header{
@@ -63,6 +64,7 @@ height: 94vh;
     border-radius: 10px;
     color: white;
     font-weight: 600;   
+    cursor: pointer;
 }
 /* ------------------------------------------ */
 /* Header Hover Lines  */
@@ -88,10 +90,29 @@ height: 94vh;
     text-align: center;
     color: white;
     font-size: 22px;
-    font-weight: 300;
    margin: 0 0 20px 0;
 }
  
 .herotext{
-    
+    box-sizing: border-box;
+    margin: 200px 100px 200px 100px;
+
+}
+.bline{
+    border: 2px solid #f27804;
+    width: 8%;
+    margin: auto;
+}
+.herotext2{
+    text-align: center;
+    font-size: 26px;
+    color: white;
+    box-sizing: border-box;
+    margin:0% 19% 0% 19% ;
+    padding: 30px 0px 0px 0px;
+
+}
+.herotext p{
+    margin: 0 0 20px 0;
+    font-weight: 100;
 }
