--- a/talentship/tsi.css
+++ b/talentship/tsi.css
@@ -2,11 +2,18 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /* body{background-color: black;} */
+
+.orange-text-color {
+    color: #f27804;
+}
+.yellow-text-color{
+    color: #f6a61b;
+}
 .hero-section
 {
     width: 98vw;
-height: 94vh;
- background-image: url('./images/bg-image.png');
+    height: 94vh;
+ background-image: url('../images/bg-image.png');
  background-size: cover; 
  background-repeat: no-repeat; 
  background-position-x: 10%;
@@ -22,34 +29,30 @@ height: 94vh;
     margin: 0PX 40px 0 40px;
     width: auto;
     color: white;
-     div {
-        cursor: pointer;
-    }
-
+    
     
 }
- 
+.header div {
+    cursor: pointer;
+} 
 .menu>ul>li{
     display: inline-flex;
     list-style-type: none;
     line-height: 22px;
     color: white !important;
-  a{
+  /* a{
         color: white;
         text-decoration: none;
         border-bottom: 2px solid transparent;
     }     
-    
+     */
 
 }
-/* .menu a{
+.menu a{
     color: white;
     text-decoration: none;
     border-bottom: 2px solid transparent;
-
-    
-
-} */
+}
 .menu>ul{
     gap: 20px;
     display: flex;
@@ -59,7 +62,7 @@ height: 94vh;
     padding: 0 15px;
     
 }
-.rightmenu{
+.right-menu{
     display: flex;
     gap: 20px;
     align-items: center;
@@ -93,24 +96,24 @@ height: 94vh;
     border: 2px solid #f27804;
     border-radius: 10px;
 }
-.ithead{
+.it-head{
     text-align: center;
     color: white;
     font-size: 22px;
    margin: 0 0 20px 0;
 }
  
-.herotext{
+.hero-text{
     box-sizing: border-box;
     margin: 200px 100px 200px 100px;
 
 }
-.bline{
+.b-line{
     border: 2px solid #f27804;
     width: 8%;
     margin: auto;
 }
-.herotext2{
+.hero-text-2{
     text-align: center;
     font-size: 26px;
     color: white;
@@ -119,11 +122,11 @@ height: 94vh;
     padding: 30px 0px 0px 0px;
 
 }
-.herotext p{
+.hero-text p{
     margin: 0 0 20px 0;
     font-weight: 100;
 }
-.buttonmiddle{  
+.button-middle{  
     padding: 15px 20px;
     background-color: #f27804;
     border: 2px solid#f27804;
@@ -133,7 +136,7 @@ height: 94vh;
     cursor: pointer;
     font-weight: 100;
 }
-.buttonmiddle:hover{
+.button-middle:hover{
     color: #f27804;
     background-color: transparent;
     border: 2px solid #f27804;
